--- a/public/index.html
+++ b/public/index.html
@@ -3,7 +3,8 @@
   <head>
     <meta charset="utf-8" />
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device width, user-scalabe=no, initial-scale=1, maximum-scale=1, minimun-scale=1">
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
@@ -13,7 +14,7 @@
     
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
     
-    <title>React App</title>
+    <title>Skyder</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
